# directory-connector

./: .browserslistrc  .cspell.json  .depcheckrc  .editorconfig  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .npmrc  .prettierignore  Dockerfile  ESM_MIGRATION_PLAN.md  README.md  angular.json  appveyor.yml  bitwarden-dc.sln  bitwarden-directory-connector-noinstaller.sln  bitwarden-directory-connector.sln  docker-compose.example.yml  docker-compose.yml  docker.build.sh  electron-builder.json  eslint.config.js  eslint.config.mjs  gulpfile.js  jest.config.cjs  jest.config.js  jest.config.mjs  jslib-removal-plan.md  lint-staged.config.mjs  make-versioninfo.ps1  package-lock.json  package.json  sea-config.json  sign.js  test.setup.ts  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.renderer.json  (+13 more)
.claude/: CLAUDE.md  plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json  renovate.json5  whitelist-capital-letters.txt
dev/: .env  directory.ldif  directory.ts  docker-compose.yml  group-fixtures.ts  user-fixtures.ts
dockerfiles/: bwdc-sync-profile.sh  bwdc-sync-profiles.sh  entrypoint.sh  scan-profiles.sh  sync-profile.sh  update-bwdc.sh
docs/: google-workspace.md
jslib/: .editorconfig  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
libs/: constants.ts  utils.ts
native/: Cargo.toml  index.d.ts  index.js  index.mjs  package-lock.json  package.json
native/src/: lib.rs  migration.rs
(+1226 files in other folders)
